--- a/index.html
+++ b/index.html
@@ -1,1 +1,128 @@
+<html>
+  <head>
+    <title> Anshul's HTML Page </title>
+    <link rel="icon" href="https://www.google.com/url?sa=i&url=https%3A%2F%2Fcommons.wikimedia.org%2Fwiki%2FFile%3AReact-icon.svg&psig=AOvVaw2S8-Oakh_ThdbW1X7jXffC&ust=1610595234802000&source=images&cd=vfe&ved=0CAIQjRxqFwoTCNCgq_j8l-4CFQAAAAAdAAAAABAD"/>
+    <meta author="Anshul Birla"/> 
+  </head>
 
+  <body>
+    <!-- Header -->
+    <header>
+      <h1>Welcome to My Page!</h1>
+      <pre>
+        Created: 12 January 2021
+        Last Updated: 12 January 2021
+      </pre>
+    </header>
+    <hr>
+
+    <!-- Main -->
+    <main>
+    <!-- About ME! -->
+        <section>
+          <h2>About Me</h2>
+          <div>
+            <p>I am a <strong> second year Computer Engineering major</strong> at <strong>UC San Diego</strong> interested in <strong>low level programming, machine learning and embedded systems.</strong> I have experience with <strong>Java, C++, C, Python and Javascript</strong>.I have experience with full-stack web development and have helped develop autonomous capabilites for sea vessels <br>
+            In my free time, I like to swim, play and watch basketball, and hang out with friends. I am always down to talk with anyone :)</p>
+          </div>
+        </section>
+        <hr>
+    <!--Projects -->
+        <section>
+         <h2>Projects</h2> 
+          <ul>
+            <li> <a href="https://github.com/Anshul-Birla/Discord_Bot">Discord Bot</a></li>
+              <ul>
+                <li><em>Python, SQL, Discord.py</em></li>
+                <li>Bot that can help store information and moderate a server with friendly commands to accomplish those tasks</li>
+                <li>The <code>addItem()</code> method took alot more effort than expected</li>
+              </ul>
+            <li> <a href="https://github.com/Anshul-Birla/Ultimate_Tic-Tac-Toe">Ultimate Tic Tac Toe </a> </li>
+            <ul>
+              <li><em>Java, JavaFX, GitHub</em></li>
+              <li>Worked in a team of 4 and created an completely original Ultimate Tic-Tac-Toe game</li>
+              <li>The <code>checkWin()</code> method was the hardest method I had implemented at the time</li>
+            </ul>
+            <li> <a href="https://github.com/Anshul-Birla/Drowsiness_Tracker">Drowsiness Detector</a> </li>
+              <ul>
+                <li><em>Python, OpenCV, Shell Scripting</em></li>
+                <li>Created a program that utilized a webcam to detect if the user was drowsy or not</li>
+              </ul>
+          </ul>
+        </section>
+    <!-- Misc. -->
+        <hr>
+        <section>
+          <h2>Misc</h2>
+            <h3>Goals</h3>
+              <ol>
+                <li> Make a Github page using Markdown</li>
+                <li> Make a Github page using HTML</li>
+                <li> Read More</li>
+                <li> Get better at ReactJS</li>
+                <li> Learn mobile web development</li>
+              </ol>
+            <h3>Things I Like</h3>
+              
+
+        </section>
+        <hr>
+    <!-- Coursework -->
+        <section> 
+          <h2> Coursework</h2>
+      <!-- Table -->
+          <table>
+            <!-- ColumnGroup -->
+            <colgroup>
+              <col span="1" class="code">
+              <col span="1" class="number">
+            </colgroup>
+            <!-- Table Head -->
+            <thead>
+              <tr>
+                <th scope="col"> Class Number</th>
+                <th scope="col"> Class Name </th>
+              </tr>
+            </thead>
+            <!-- Table Data and Table Row -->
+            <tr>
+              <td>CSE 12</td>
+              <td> Basic Data Structures </td>
+            </tr>
+            <tr>
+              <td>CSE 100</td>
+              <td>Advanced Data Structures</td>
+            </tr>
+            <tr>
+              <td>CSE 30</td>
+              <td>Computer Organization & Systems Programming</td> 
+            </tr>
+            <tr>
+              <td>CSE 21 </td>
+              <td>Mathematics for Algorithms & Systems</td>
+            </tr>
+            <tr>
+              <td>CSE 20</td>
+              <td>Discrete Mathematics</td>
+            </tr>
+            <tr>
+              <td>Math 18</td>
+              <td>Linear Algebra</td>
+            </tr>
+            <tr>
+              <td>Math 20D</td>
+              <td>Differential Equations</td>
+            </tr>
+        <!-- Caption -->
+            <caption> Coursework Table </caption>
+          </table>
+        </section>
+        <hr>
+
+    </main>
+    <footer>
+      <h4>Thanks for visiting :)</h4>
+    </footer>
+
+  </body>
+</html>
