--- a/index.html
+++ b/index.html
@@ -15,14 +15,13 @@
       </pre>
     </header>
     <hr>
-
     <!-- Main -->
     <main>
     <!-- About ME! -->
         <section>
           <h2>About Me</h2>
           <div>
-            <p>I am a <strong> second year Computer Engineering major</strong> at <strong>UC San Diego</strong> interested in <strong>low level programming, machine learning and embedded systems.</strong> I have experience with <strong>Java, C++, C, Python and Javascript</strong>.I have experience with full-stack web development and have helped develop autonomous capabilites for sea vessels <br>
+            <p>I am a <strong> second year Computer Engineering major</strong> at <strong>UC San Diego</strong> interested in <strong>low level programming, machine learning and embedded systems.</strong> I have experience with <strong>Java, C++, C, Python and Javascript</strong>.I have experience with full-stack web development and have helped develop autonomous capabilites for sea vessels <br> <br>
             In my free time, I like to swim, play and watch basketball, and hang out with friends. I am always down to talk with anyone :)</p>
           </div>
         </section>
@@ -30,25 +29,27 @@
     <!--Projects -->
         <section>
          <h2>Projects</h2> 
-          <ul>
-            <li> <a href="https://github.com/Anshul-Birla/Discord_Bot">Discord Bot</a></li>
-              <ul>
-                <li><em>Python, SQL, Discord.py</em></li>
-                <li>Bot that can help store information and moderate a server with friendly commands to accomplish those tasks</li>
-                <li>The <code>addItem()</code> method took alot more effort than expected</li>
-              </ul>
-            <li> <a href="https://github.com/Anshul-Birla/Ultimate_Tic-Tac-Toe">Ultimate Tic Tac Toe </a> </li>
+          <nav>
             <ul>
-              <li><em>Java, JavaFX, GitHub</em></li>
-              <li>Worked in a team of 4 and created an completely original Ultimate Tic-Tac-Toe game</li>
-              <li>The <code>checkWin()</code> method was the hardest method I had implemented at the time</li>
-            </ul>
-            <li> <a href="https://github.com/Anshul-Birla/Drowsiness_Tracker">Drowsiness Detector</a> </li>
+              <li> <a href="https://github.com/Anshul-Birla/Discord_Bot">Discord Bot</a></li>
+                <ul>
+                  <li><em>Python, SQL, Discord.py</em></li>
+                  <li>Bot that can help store information and moderate a server with friendly commands to accomplish those tasks</li>
+                  <li>The <code>addItem()</code> method took alot more effort than expected</li>
+                </ul>
+              <li> <a href="https://github.com/Anshul-Birla/Ultimate_Tic-Tac-Toe">Ultimate Tic Tac Toe </a> </li>
               <ul>
-                <li><em>Python, OpenCV, Shell Scripting</em></li>
-                <li>Created a program that utilized a webcam to detect if the user was drowsy or not</li>
+                <li><em>Java, JavaFX, GitHub</em></li>
+                <li>Worked in a team of 4 and created an completely original Ultimate Tic-Tac-Toe game</li>
+                <li>The <code>checkWin()</code> method was the hardest method I had implemented at the time</li>
               </ul>
-          </ul>
+              <li> <a href="https://github.com/Anshul-Birla/Drowsiness_Tracker">Drowsiness Detector</a> </li>
+                <ul>
+                  <li><em>Python, OpenCV, Shell Scripting</em></li>
+                  <li>Created a program that utilized a webcam to detect if the user was drowsy or not</li>
+                </ul>
+            </ul>
+          </nav>
         </section>
     <!-- Misc. -->
         <hr>
@@ -58,11 +59,18 @@
               <ol>
                 <li> Make a Github page using Markdown</li>
                 <li> Make a Github page using HTML</li>
-                <li> Read More</li>
-                <li> Get better at ReactJS</li>
-                <li> Learn mobile web development</li>
+                <li> <b>Read More</b></li>
+                <li> <b>Get better at ReactJS</b></li>
+                <li> <b>Learn mobile app development</b></li>
               </ol>
+              <p>I would love to complete these goals by the end of 2021</p>
+              <aside><p><b> Bolded</b> tasks are uncompleted </p></aside>
             <h3>Things I Like</h3>
+              <ul>
+                <li>Agatha Chrisitie's <i>The Murder of Roger Ackroyd</i> is one of my favorite books</li>
+                <li><i>Memento</i>, directed by Chirstopher Nolan is a fantastic movie</li>
+                <li>"Stranger Things" is a cool TV Show also</li>
+              </ul>
               
 
         </section>
