--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
+<!DOCTYPE html>
 <html>
   <head>
     <title> Anshul's HTML Page </title>
     <link rel="icon" href="https://www.google.com/url?sa=i&url=https%3A%2F%2Fcommons.wikimedia.org%2Fwiki%2FFile%3AReact-icon.svg&psig=AOvVaw2S8-Oakh_ThdbW1X7jXffC&ust=1610595234802000&source=images&cd=vfe&ved=0CAIQjRxqFwoTCNCgq_j8l-4CFQAAAAAdAAAAABAD"/>
-    <meta author="Anshul Birla"/> 
+    <meta name="Anshul-Birla"/>
+
   </head>
 
   <body>
@@ -27,12 +29,12 @@
             </details>
           </div>
           <figure>
-            <img src="image.jpg" alt="This should be a pic of me" width="150px" height="150px"/>
+            <img src="image.jpg" alt="This should be a pic of me" width="150" height="150"/>
             <figcaption>A Picture of Me at Irvine!</figcaption>
           </figure>
           <picture>
-            <source srcset="cynd.jpg" media="(min-width:1000px)" width="150px" height="150px">
-            <img src="toto.jpg" alt="" width="150px" height="150px"/>
+            <source srcset="cynd.jpg" media="(min-width:1000px)">
+            <img src="toto.jpg" alt="" width="150" height="150"/>
           </picture>
           <figure>
             <figcaption>The Pokemon that makes this sound is somewhere on this page</figcaption>
@@ -48,27 +50,25 @@
     <!--Projects -->
         <section>
          <h2>Projects</h2> 
-          <nav>
-            <ul>
-              <li> <a href="https://github.com/Anshul-Birla/Discord_Bot">Discord Bot</a></li>
-                <ul>
-                  <li><em>Python, SQL, Discord.py</em></li>
-                  <li>Bot that can help store information and moderate a server with friendly commands to accomplish those tasks</li>
-                  <li>The <code>addItem()</code> method took alot more effort than expected</li>
-                </ul>
-              <li> <a href="https://github.com/Anshul-Birla/Ultimate_Tic-Tac-Toe">Ultimate Tic Tac Toe </a> </li>
+          <ul>
+            <li> <a href="https://github.com/Anshul-Birla/Discord_Bot">Discord Bot</a></li>
               <ul>
-                <li><em>Java, JavaFX, GitHub</em></li>
-                <li>Worked in a team of 4 and created an completely original Ultimate Tic-Tac-Toe game</li>
-                <li>The <code>checkWin()</code> method was the hardest method I had implemented at the time</li>
+                <li><em>Python, SQL, Discord.py</em></li>
+                <li>Bot that can help store information and moderate a server with friendly commands to accomplish those tasks</li>
+                <li>The <code>addItem()</code> method took alot more effort than expected</li>
               </ul>
-              <li> <a href="https://github.com/Anshul-Birla/Drowsiness_Tracker">Drowsiness Detector</a> </li>
-                <ul>
-                  <li><em>Python, OpenCV, Shell Scripting</em></li>
-                  <li>Created a program that utilized a webcam to detect if the user was drowsy or not</li>
-                </ul>
+            <li> <a href="https://github.com/Anshul-Birla/Ultimate_Tic-Tac-Toe">Ultimate Tic Tac Toe </a> </li>
+            <ul>
+              <li><em>Java, JavaFX, GitHub</em></li>
+              <li>Worked in a team of 4 and created an completely original Ultimate Tic-Tac-Toe game</li>
+              <li>The <code>checkWin()</code> method was the hardest method I had implemented at the time</li>
             </ul>
-          </nav>
+            <li> <a href="https://github.com/Anshul-Birla/Drowsiness_Tracker">Drowsiness Detector</a> </li>
+              <ul>
+                <li><em>Python, OpenCV, Shell Scripting</em></li>
+                <li>Created a program that utilized a webcam to detect if the user was drowsy or not</li>
+              </ul>
+          </ul>
         </section>
     <!-- Misc. -->
         <hr>
@@ -95,7 +95,7 @@
                 src="https://www.youtube.com/embed/Xc4xYacTu-E">
               </iframe>
               <video controls width="250">
-                <source src="snow.mp4"   type="video/mp4" width="150px" height="150px">
+                <source src="snow.mp4"   type="video/mp4">
                 Sorry your browser does not support this video
               </video>
 
@@ -108,6 +108,8 @@
           <h2> Coursework</h2>
       <!-- Table -->
           <table>
+          <!-- Caption -->
+            <caption> Coursework Table </caption>
             <!-- ColumnGroup -->
             <colgroup>
               <col span="1" class="code">
@@ -149,8 +151,7 @@
               <td>Math 20D</td>
               <td>Differential Equations</td>
             </tr>
-        <!-- Caption -->
-            <caption> Coursework Table </caption>
+
           </table>
           <template id="courserow">
             <tr>
@@ -225,7 +226,7 @@
 
             <!-- Input Count: 1 -->
             <div>
-              <label for="ucsd_rating"> How satisifed are you with your experience at UCSD?</label>
+              <label for="ucsd_satisfaction"> How satisifed are you with your experience at UCSD?</label>
               <input list="ucsd_satisfaction" id="statisfaction_choice" name="statisfaction_choice"/>
               <datalist id="ucsd_satisfaction">
                 <option value="Very satisifed">
@@ -238,7 +239,7 @@
 
             <div>
               <label for="paragraph">Enter your favorite paragraph you have read:</label>
-              <textarea id="paragraph"name="paragraph" rows="7" cols="25">Anger was washed away in the river along with any obligation.
+              <textarea id="paragraph" name="paragraph" rows="7" cols="25">Anger was washed away in the river along with any obligation.
               </textarea> 
             </div>
 
@@ -260,6 +261,16 @@
           <svg width="150" height="50">
             <rect width="150" height="100" style="fill:aquamarine"/>
           </svg>
+        </section>
+
+        <section>
+          <nav>
+            <ul>
+              <li><a href="https://www.google.com/">Go back to searching!</a></li>
+              <li><a href="https://www.coolmathgames.com/">Play some games</a></li>
+              <li><a href="https://canvas.ucsd.edu/"> Study some more</a></li>
+            </ul>
+          </nav>
         </section>
 
     </main>
