more fixes for w3

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title> Anshul's HTML Page </title>
     <link rel="icon" href="https://www.google.com/url?sa=i&url=https%3A%2F%2Fcommons.wikimedia.org%2Fwiki%2FFile%3AReact-icon.svg&psig=AOvVaw2S8-Oakh_ThdbW1X7jXffC&ust=1610595234802000&source=images&cd=vfe&ved=0CAIQjRxqFwoTCNCgq_j8l-4CFQAAAAAdAAAAABAD"/>
     <meta name="Anshul-Birla"/>
-
+    <meta content="Anshul-Birla"/>
   </head>
 
   <body>
@@ -51,19 +51,19 @@
         <section>
          <h2>Projects</h2> 
           <ul>
-            <li> <a href="https://github.com/Anshul-Birla/Discord_Bot">Discord Bot</a></li>
+            <li> Discord Bot </li>
               <ul>
                 <li><em>Python, SQL, Discord.py</em></li>
                 <li>Bot that can help store information and moderate a server with friendly commands to accomplish those tasks</li>
                 <li>The <code>addItem()</code> method took alot more effort than expected</li>
               </ul>
-            <li> <a href="https://github.com/Anshul-Birla/Ultimate_Tic-Tac-Toe">Ultimate Tic Tac Toe </a> </li>
+            <li>Ultimate Tic Tac Toe </li>
             <ul>
               <li><em>Java, JavaFX, GitHub</em></li>
               <li>Worked in a team of 4 and created an completely original Ultimate Tic-Tac-Toe game</li>
               <li>The <code>checkWin()</code> method was the hardest method I had implemented at the time</li>
             </ul>
-            <li> <a href="https://github.com/Anshul-Birla/Drowsiness_Tracker">Drowsiness Detector</a> </li>
+            <li>Drowsiness Detector</li>
               <ul>
                 <li><em>Python, OpenCV, Shell Scripting</em></li>
                 <li>Created a program that utilized a webcam to detect if the user was drowsy or not</li>
@@ -227,7 +227,7 @@
             <!-- Input Count: 1 -->
             <div>
               <label for="ucsd_satisfaction"> How satisifed are you with your experience at UCSD?</label>
-              <input list="ucsd_satisfaction" id="statisfaction_choice" name="statisfaction_choice"/>
+              <input list="ucsd_satisfaction" id="ucsd_satisfaction" name="statisfaction_choice"/>
               <datalist id="ucsd_satisfaction">
                 <option value="Very satisifed">
                 <option value="Moderately satisifed">
