more fixes for w3

--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
   <head>
     <title> Anshul's HTML Page </title>
     <link rel="icon" href="https://www.google.com/url?sa=i&url=https%3A%2F%2Fcommons.wikimedia.org%2Fwiki%2FFile%3AReact-icon.svg&psig=AOvVaw2S8-Oakh_ThdbW1X7jXffC&ust=1610595234802000&source=images&cd=vfe&ved=0CAIQjRxqFwoTCNCgq_j8l-4CFQAAAAAdAAAAABAD"/>
-    <meta name="Anshul-Birla"/>
-    <meta content="Anshul-Birla"/>
+    <meta name="author" content="Anshul-Birla">
   </head>
 
   <body>
@@ -50,25 +49,23 @@
     <!--Projects -->
         <section>
          <h2>Projects</h2> 
-          <ul>
-            <li> Discord Bot </li>
-              <ul>
-                <li><em>Python, SQL, Discord.py</em></li>
-                <li>Bot that can help store information and moderate a server with friendly commands to accomplish those tasks</li>
-                <li>The <code>addItem()</code> method took alot more effort than expected</li>
-              </ul>
-            <li>Ultimate Tic Tac Toe </li>
+          <h3>Discord Bot</h3>
+            <ul>
+              <li><em>Python, SQL, Discord.py</em></li>
+              <li>Bot that can help store information and moderate a server with friendly commands to accomplish those tasks</li>
+              <li>The <code>addItem()</code> method took alot more effort than expected</li>
+            </ul>
+          <h3>Ultimate Tic Tac Toe </h3>
             <ul>
               <li><em>Java, JavaFX, GitHub</em></li>
               <li>Worked in a team of 4 and created an completely original Ultimate Tic-Tac-Toe game</li>
               <li>The <code>checkWin()</code> method was the hardest method I had implemented at the time</li>
             </ul>
-            <li>Drowsiness Detector</li>
-              <ul>
-                <li><em>Python, OpenCV, Shell Scripting</em></li>
-                <li>Created a program that utilized a webcam to detect if the user was drowsy or not</li>
-              </ul>
-          </ul>
+          <h3>Drowsiness Detector</h3>
+            <ul>
+              <li><em>Python, OpenCV, Shell Scripting</em></li>
+              <li>Created a program that utilized a webcam to detect if the user was drowsy or not</li>
+            </ul>
         </section>
     <!-- Misc. -->
         <hr>
@@ -226,8 +223,8 @@
 
             <!-- Input Count: 1 -->
             <div>
-              <label for="ucsd_satisfaction"> How satisifed are you with your experience at UCSD?</label>
-              <input list="ucsd_satisfaction" id="ucsd_satisfaction" name="statisfaction_choice"/>
+              <label for="ucsd_satisfaction_list"> How satisifed are you with your experience at UCSD?</label>
+              <input list="ucsd_satisfaction" id="ucsd_satisfaction_list" name="statisfaction_choice"/>
               <datalist id="ucsd_satisfaction">
                 <option value="Very satisifed">
                 <option value="Moderately satisifed">
