more fixes for w3

--- a/index.html
+++ b/index.html
@@ -160,6 +160,7 @@
         </section>
         <hr>
         <section>
+          <h2>Form to Fill Out</h2>
           <form>
             <!-- Input count: 7 -->
             <div>
@@ -247,6 +248,17 @@
             <input type="submit" value="Submit">
           </form>
 
+        <section>
+          <h5>Navigate Away</h5>
+          <nav>
+            <ul>
+              <li><a href="https://www.google.com/">Go back to searching!</a></li>
+              <li><a href="https://www.coolmathgames.com/">Play some games</a></li>
+              <li><a href="https://canvas.ucsd.edu/"> Study some more</a></li>
+            </ul>
+          </nav>
+        </section>
+
         </section>
         <hr>
         <section>
@@ -258,16 +270,6 @@
           <svg width="150" height="50">
             <rect width="150" height="100" style="fill:aquamarine"/>
           </svg>
-        </section>
-
-        <section>
-          <nav>
-            <ul>
-              <li><a href="https://www.google.com/">Go back to searching!</a></li>
-              <li><a href="https://www.coolmathgames.com/">Play some games</a></li>
-              <li><a href="https://canvas.ucsd.edu/"> Study some more</a></li>
-            </ul>
-          </nav>
         </section>
 
     </main>
