--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title> Anshul's HTML Page </title>
-    <link rel="icon" href="https://www.google.com/url?sa=i&url=https%3A%2F%2Fcommons.wikimedia.org%2Fwiki%2FFile%3AReact-icon.svg&psig=AOvVaw2S8-Oakh_ThdbW1X7jXffC&ust=1610595234802000&source=images&cd=vfe&ved=0CAIQjRxqFwoTCNCgq_j8l-4CFQAAAAAdAAAAABAD"/>
+    <link rel="icon" href="cynd.png" type="image/png" size="114x114">
     <meta name="author" content="Anshul-Birla">
   </head>
 
