more fixes for w3

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title> Anshul's HTML Page </title>
-    <link rel="icon" href="cynd.png" type="image/png" size="114x114">
+    <link rel="icon" href="cynd.png" type="image/png" sizes="114x114">
     <meta name="author" content="Anshul-Birla">
   </head>
 
