--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
   <head>
     <title> Anshul's HTML Page </title>
     <link rel="icon" href="cynd.png" type="image/png" sizes="114x114">
+    <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
     <meta name="author" content="Anshul-Birla">
   </head>
 
