Added border, class selector, and another color selector

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             </details>
           </div>
           <figure>
-            <img src="image.jpg" alt="This should be a pic of me" width="150" height="150"/>
+            <img class="image"src="image.jpg" alt="This should be a pic of me" width="150" height="150"/>
             <figcaption>A Picture of Me at Irvine!</figcaption>
           </figure>
           <picture>
