--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
               </textarea> 
             </div>
 
-            <button> Click me for a good day!</button>
+            <button class="button" id="dissapearing_button"> Click me for a good day!</button>
 
             <!-- Input Count: 2 -->
             <input type="reset" value="Reset">
