added psuedo classes

--- a/index.html
+++ b/index.html
@@ -255,9 +255,9 @@
           <h5>Navigate Away</h5>
           <nav>
             <ul>
-              <li><a href="https://www.google.com/">Go back to searching!</a></li>
-              <li><a href="https://www.coolmathgames.com/">Play some games</a></li>
-              <li><a href="https://canvas.ucsd.edu/"> Study some more</a></li>
+              <li><a class="link" href="https://www.google.com/">Go back to searching!</a></li>
+              <li><a class="link" href="https://www.coolmathgames.com/">Play some games</a></li>
+              <li><a class="link" href="https://canvas.ucsd.edu/"> Study some more</a></li>
             </ul>
           </nav>
         </section>
