Added attirbute selector

--- a/index.html
+++ b/index.html
@@ -124,31 +124,31 @@
             </thead>
             <!-- Table Data and Table Row -->
             <tr>
-              <td>CSE 12</td>
+              <td id="CSE 12">CSE 12</td>
               <td> Basic Data Structures </td>
             </tr>
             <tr>
-              <td>CSE 100</td>
+              <td id="CSE 100">CSE 100</td>
               <td>Advanced Data Structures</td>
             </tr>
             <tr>
-              <td>CSE 30</td>
+              <td id="CSE 30">CSE 30</td>
               <td>Computer Organization & Systems Programming</td> 
             </tr>
             <tr>
-              <td>CSE 21 </td>
+              <td id="CSE 21">CSE 21 </td>
               <td>Mathematics for Algorithms & Systems</td>
             </tr>
             <tr>
-              <td>CSE 20</td>
+              <td id="CSE 20">CSE 20</td>
               <td>Discrete Mathematics</td>
             </tr>
             <tr>
-              <td>Math 18</td>
+              <td id="Math 18">Math 18</td>
               <td>Linear Algebra</td>
             </tr>
             <tr>
-              <td>Math 20D</td>
+              <td id="Math 20D">Math 20D</td>
               <td>Differential Equations</td>
             </tr>
 
