added combining 2 selectors and set height and width of an element

--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
             </div>
 
             <!-- Input Count: 1 -->
-            <div>
+            <div class="radio_form">
               <fieldset>
                 <legend>Choose your favorite Johto Starter</legend>
                 <input type="radio" id="Totodile" name="pokemon">
@@ -221,7 +221,7 @@
                 <input type="radio" id="Cyndaquil" name="pokemon">
                 <label for="Cyndaquil">Cyndaquil</label> <br>
                 <input type="radio" id="Chikorita" name="pokemon">
-                <label for="Cyndaquil">Chikorit</label> <br>
+                <label for="Cyndaquil">Chikorita</label> <br>
               </fieldset>
             </div>
 
