--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 
   <body>
     <!-- Header -->
-    <header>
+    <!-- Inline style and  position: sticky-->
+    <header style="position: sticky; top:0.5%">
       <h1>Welcome to My Page!</h1>
       <pre>
         Created: 12 January 2021
