Added all margin stuff

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         </section>
         <hr>
     <!--Projects -->
-        <section>
+        <section class="projects">
          <h2>Projects</h2> 
           <h3>Discord Bot</h3>
             <ul>
@@ -86,15 +86,19 @@
               <p>I would love to complete these goals by the end of 2021</p>
               <aside><p><b> Bolded</b> tasks are uncompleted </p></aside>
             <h3>Things I Like</h3>
-              <ul>
-                <li>Agatha Chrisitie's <i>The Murder of Roger Ackroyd</i> is one of my favorite books</li>
-                <li><i>Memento</i>, directed by Chirstopher Nolan is a fantastic movie</li>
-                <li>"Stranger Things" is a cool TV Show also</li>
-                <li>A couple of cool videos to watch are below:
-              </ul>
-              <iframe 
-                src="https://www.youtube.com/embed/Xc4xYacTu-E">
-              </iframe>
+              <div class="like_list">
+                <ul>
+                  <li>Agatha Chrisitie's <i>The Murder of Roger Ackroyd</i> is one of my favorite books</li>
+                  <li><i>Memento</i>, directed by Chirstopher Nolan is a fantastic movie</li>
+                  <li>"Stranger Things" is a cool TV Show also</li>
+                  <li>A couple of cool videos to watch are below:
+                </ul>
+              </div>
+              <div class="video">
+                <iframe 
+                  src="https://www.youtube.com/embed/Xc4xYacTu-E">
+                </iframe>
+              <div>
               <video controls width="250">
                 <source src="snow.mp4"   type="video/mp4">
                 Sorry your browser does not support this video
