Added min/max width

--- a/index.html
+++ b/index.html
@@ -36,8 +36,7 @@
             <figcaption>A Picture of Me at Irvine!</figcaption>
           </figure>
           <picture>
-            <source srcset="cynd.jpg" media="(min-width:1000px)">
-            <img src="toto.jpg" alt="" width="150" height="150"/>
+            <img src="cynd.jpg" alt="" class="pic"/>
           </picture>
           <figure>
             <figcaption>The Pokemon that makes this sound is somewhere on this page</figcaption>
@@ -98,7 +97,7 @@
                 <iframe 
                   src="https://www.youtube.com/embed/Xc4xYacTu-E">
                 </iframe>
-              <div>
+              </div>
               <video controls width="250">
                 <source src="snow.mp4"   type="video/mp4">
                 Sorry your browser does not support this video
