Added flexbox attributes

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
         <hr>
         <section>
           <h2>Form to Fill Out</h2>
-          <form>
+            <div class="container">
             <!-- Input count: 7 -->
             <div>
               <label> Pick your favorite color!: </label>
@@ -253,7 +253,7 @@
             <!-- Input Count: 2 -->
             <input type="reset" value="Reset">
             <input type="submit" value="Submit">
-          </form>
+          </div>
 
         <section>
           <h5>Navigate Away</h5>
