--- a/index.html
+++ b/index.html
@@ -278,6 +278,25 @@
             <rect width="150" height="100" style="fill:aquamarine"/>
           </svg>
         </section>
+        <section>
+          <h4>
+            Here is a table rendered using grid with CSS
+          </h4>
+          <div class="board">
+            <div class="square">CSE 12</div>
+            <div class="square">Basic Data Structures</div>
+            <div class="square">CSE 100</div>
+            <div class="square">Advanced Data Structures</div>
+            <div class="square">CSE 30</div>
+            <div class="square">Computer Organization & Systems Programming</div>
+            <div class="square">CSE 21</div>
+            <div class="square">Mathematics for Algorithms & Systems</div>
+            <div class="square">Math 18</div>
+            <div class="square">Linear Algebra</div>
+            <div class="square">Math 20D</div>
+            <div class="square">Differential Equations</div>
+          </div>
+        </section>
 
     </main>
     <footer>
