should b all done

--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
     <meta name="author" content="Anshul-Birla">
   </head>
 
+  <style>
+    /* Selector List */
+    h1, h2, h3 {
+      color: cadetblue;
+      text-decoration: wavy;
+      text-align: center;
+    }
+  </style>
+
   <body>
     <!-- Header -->
     <!-- Inline style and  position: sticky-->
@@ -279,9 +288,9 @@
           </svg>
         </section>
         <section>
-          <h4>
-            Here is a table rendered using grid with CSS
-          </h4>
+          <div class="block_div">
+            Here is a table rendered using grid instead of table html tag
+           </div>
           <div class="board">
             <div class="square">CSE 12</div>
             <div class="square">Basic Data Structures</div>
@@ -297,6 +306,8 @@
             <div class="square">Differential Equations</div>
           </div>
         </section>
+
+ 
 
     </main>
     <footer>
