--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
       text-decoration: wavy;
       text-align: center;
     }
+    h1 {
+      font-size: 5ex;
+    }
+    
   </style>
 
   <body>
